docs: Added docs to NX

--- a/documentation/blog/2020-01-27-v0.0.4.md
+++ b/documentation/blog/2020-01-27-v0.0.4.md
@@ -2,9 +2,9 @@
 title: v0.0.4
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* Add files field to `@nestjs-query/core` `package.json`
+* Add files field to `@ptc-org/nestjs-query-core` `package.json`
