--- a/documentation/blog/2020-02-18-v0.2.1.md
+++ b/documentation/blog/2020-02-18-v0.2.1.md
@@ -2,9 +2,9 @@
 title: v0.2.1
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* Fixed case where `@FilterableField` decorator was not passing arguments correctly to `@Field` decorator [#20](https://github.com/doug-martin/nestjs-query/issues/20)
+* Fixed case where `@FilterableField` decorator was not passing arguments correctly to `@Field` decorator [#20](https://github.com/tripss/nestjs-query/issues/20)
