--- a/documentation/blog/2020-02-23-v0.3.4.md
+++ b/documentation/blog/2020-02-23-v0.3.4.md
@@ -2,9 +2,9 @@
 title: v0.3.4
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [FIXED] Can't remove on Many-To-Many relations [#31](https://github.com/doug-martin/nestjs-query/issues/31)
+* [FIXED] Can't remove on Many-To-Many relations [#31](https://github.com/tripss/nestjs-query/issues/31)
