--- a/documentation/blog/2020-02-25-v0.5.0.md
+++ b/documentation/blog/2020-02-25-v0.5.0.md
@@ -2,9 +2,9 @@
 title: v0.5.0
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, minor]
 ---
 
-* Added `decorators` option to resolver options to allow providing custom decorators to endpoints [#36](https://github.com/doug-martin/nestjs-query/issues/36)  
+* Added `decorators` option to resolver options to allow providing custom decorators to endpoints [#36](https://github.com/tripss/nestjs-query/issues/36)  
