--- a/documentation/blog/2020-03-02-v0.5.1.md
+++ b/documentation/blog/2020-03-02-v0.5.1.md
@@ -2,10 +2,10 @@
 title: v0.5.1
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [DOCS] Added clarification around individual resolvers and relations with examples [#42](https://github.com/doug-martin/nestjs-query/issues/42)
-* [ADDED] Exposed `Relatable` mixin from `@nestjs-query/graphql` [#42](https://github.com/doug-martin/nestjs-query/issues/42)
+* [DOCS] Added clarification around individual resolvers and relations with examples [#42](https://github.com/tripss/nestjs-query/issues/42)
+* [ADDED] Exposed `Relatable` mixin from `@nestjs-query/graphql` [#42](https://github.com/tripss/nestjs-query/issues/42)
