--- a/documentation/blog/2020-03-08-v0.6.0.md
+++ b/documentation/blog/2020-03-08-v0.6.0.md
@@ -2,12 +2,12 @@
 title: v0.6.0
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, minor]
 ---
 
-* [FIXED] Get Underlying Entity Object [#41](https://github.com/doug-martin/nestjs-query/issues)
+* [FIXED] Get Underlying Entity Object [#41](https://github.com/tripss/nestjs-query/issues)
   * Changed `TypeOrmQueryService` to operate on the `Entity`
   * Added new `AssemblerQueryService` to translate between the `DTO` and `Entity`
 * [ADDED] New `InjectTypeOrmQueryService` decorator to auto-create a TypeOrm query service.
