--- a/documentation/blog/2020-03-27-v0.7.2.md
+++ b/documentation/blog/2020-03-27-v0.7.2.md
@@ -2,7 +2,7 @@
 title: v0.7.2
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
