--- a/documentation/blog/2020-04-03-v0.7.5.md
+++ b/documentation/blog/2020-04-03-v0.7.5.md
@@ -2,10 +2,10 @@
 title: v0.7.5
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
 * [FIXED] Tables with composite primary keys are not quoted properly.
-* [DOCS] Added docs for working with multiple connections [#73](https://github.com/doug-martin/nestjs-query/pull/73) - [@johannesschobel](https://github.com/johannesschobel)
+* [DOCS] Added docs for working with multiple connections [#73](https://github.com/tripss/nestjs-query/pull/73) - [@johannesschobel](https://github.com/johannesschobel)
