--- a/documentation/blog/2020-04-08-v0.8.1.md
+++ b/documentation/blog/2020-04-08-v0.8.1.md
@@ -2,11 +2,11 @@
 title: v0.8.1
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [FIXED] Mysql error "LIMIT in subquery" [#77](https://github.com/doug-martin/nestjs-query/issues/77)
+* [FIXED] Mysql error "LIMIT in subquery" [#77](https://github.com/tripss/nestjs-query/issues/77)
     * Changed `nestjs-query/query-typeorm` to not use subqueries to fetch relations.
 
