--- a/documentation/blog/2020-04-15-v0.8.3.md
+++ b/documentation/blog/2020-04-15-v0.8.3.md
@@ -2,9 +2,9 @@
 title: v0.8.3
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [FIXED]  Add support for extending abstract object types [#82](https://github.com/doug-martin/nestjs-query/issues/82)
+* [FIXED]  Add support for extending abstract object types [#82](https://github.com/tripss/nestjs-query/issues/82)
