--- a/documentation/docs/migration-guides/v0.10.x-to-v0.11.x.mdx
+++ b/documentation/docs/migration-guides/v0.10.x-to-v0.11.x.mdx
@@ -18,8 +18,8 @@ You still need to import the `NestjsQueryTypeOrmModule` or `NestjsQuerySequelize
 :::
 
 ```ts
-import { QueryService, InjectQueryService } from '@nestjs-query/core';
-import { CRUDResolver } from '@nestjs-query/query-graphql';
+import { QueryService, InjectQueryService } from '@ptc-org/nestjs-query-core';
+import { CRUDResolver } from '@ptc-org/nestjs-query-graphql';
 import { Resolver } from '@nestjs/graphql';
 import { TodoItemDTO } from './dto/todo-item.dto';
 import { TodoItemEntity } from './todo-item.entity';
