--- a/documentation/blog/2020-02-21-v0.3.0.md
+++ b/documentation/blog/2020-02-21-v0.3.0.md
@@ -2,10 +2,10 @@
 title: v0.3.0
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, minor]
 ---
 
 * Added dataloader support!
-* Fixed issue with loading of many-to-many relations [#22](https://github.com/doug-martin/nestjs-query/issues/22)
+* Fixed issue with loading of many-to-many relations [#22](https://github.com/tripss/nestjs-query/issues/22)
