--- a/documentation/blog/2020-02-23-v0.3.5.md
+++ b/documentation/blog/2020-02-23-v0.3.5.md
@@ -2,9 +2,9 @@
 title: v0.3.5
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [FIXED] Validate Input for Create & Update [#19](https://github.com/doug-martin/nestjs-query/issues/19)
+* [FIXED] Validate Input for Create & Update [#19](https://github.com/tripss/nestjs-query/issues/19)
