--- a/documentation/blog/2020-03-28-v0.7.3.md
+++ b/documentation/blog/2020-03-28-v0.7.3.md
@@ -2,10 +2,10 @@
 title: v0.7.3
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* [DOCS] Update docs to include a complete example of custom methods [#64](https://github.com/doug-martin/nestjs-query/issues/64)
-* [FIXED] Issue where creating or updating allows specifying primary keys [#65](https://github.com/doug-martin/nestjs-query/issues/65)
+* [DOCS] Update docs to include a complete example of custom methods [#64](https://github.com/tripss/nestjs-query/issues/64)
+* [FIXED] Issue where creating or updating allows specifying primary keys [#65](https://github.com/tripss/nestjs-query/issues/65)
