--- a/documentation/blog/2020-04-07-v0.8.0.md
+++ b/documentation/blog/2020-04-07-v0.8.0.md
@@ -2,9 +2,9 @@
 title: v0.8.0
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, minor]
 ---
 
-* [FIXED] Defining additional UpdateDtos breaks Schema. [#72](https://github.com/doug-martin/nestjs-query/issues/72)
+* [FIXED] Defining additional UpdateDtos breaks Schema. [#72](https://github.com/tripss/nestjs-query/issues/72)
