--- a/documentation/blog/2020-04-16-v0.8.4.md
+++ b/documentation/blog/2020-04-16-v0.8.4.md
@@ -2,10 +2,10 @@
 title: v0.8.4
 author: Doug Martin
 author_title: Creator
-author_url: https://github.com/doug-martin
+author_url: https://github.com/tripss
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
 tags: [releases, patch]
 ---
 
-* docs(typeorm): Call out foreign keys in entity and DTO [#84](https://github.com/doug-martin/nestjs-query/issues/84)
-* docs(typeorm): Relations on an entity/dto [#85](https://github.com/doug-martin/nestjs-query/issues/85)
+* docs(typeorm): Call out foreign keys in entity and DTO [#84](https://github.com/tripss/nestjs-query/issues/84)
+* docs(typeorm): Relations on an entity/dto [#85](https://github.com/tripss/nestjs-query/issues/85)
