--- a/documentation/docs/migration-guides/v0.5.x-to-v0.6.x.md
+++ b/documentation/docs/migration-guides/v0.5.x-to-v0.6.x.md
@@ -11,7 +11,7 @@ This means you no longer need to manually create a service in order to expose yo
 To enable decorator import the `NestjsQueryTypeOrmModule` to your module definition
 
 ```ts
-import { NestjsQueryTypeOrmModule } from '@nestjs-query/query-typeorm';
+import { NestjsQueryTypeOrmModule } from '@ptc-org/nestjs-query-typeorm';
 import { Module } from '@nestjs/common';
 import { TodoItemEntity } from './todo-item.entity';
 import { TodoItemResolver } from './todo-item.resolver';
@@ -26,10 +26,10 @@ export class TodoItemModule {}
 One you have imported the module you can inject a `TypeOrmQueryService`.
 
 ```ts
-import { QueryService } from '@nestjs-query/core';
-import { CRUDResolver } from '@nestjs-query/query-graphql';
+import { QueryService } from '@ptc-org/nestjs-query-core';
+import { CRUDResolver } from '@ptc-org/nestjs-query-graphql';
 import { Resolver } from '@nestjs/graphql';
-import { InjectTypeOrmQueryService } from '@nestjs-query/query-typeorm';
+import { InjectTypeOrmQueryService } from '@ptc-org/nestjs-query-typeorm';
 import { TodoItemDTO } from './dto/todo-item.dto';
 import { TodoItemEntity } from './todo-item.entity';
 
@@ -43,15 +43,15 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO) {
 
 ## `TypeOrmQueryService`
 
-In the previous version of `@nestjs-query` the `TypeOrmQueryService` translated between the DTO and Entity. For a more in-depth description see [#41](https://github.com/doug-martin/nestjs-query/issues/41)
+In the previous version of `@nestjs-query` the `TypeOrmQueryService` translated between the DTO and Entity. For a more in-depth description see [#41](https://github.com/tripss/nestjs-query/issues/41)
 
 In the latest version the `TypeOrmQueryService` only operates on entities.
 
 `v0.5.x`
 
 ```ts
-import { QueryService } from '@nestjs-query/core';
-import { TypeOrmQueryService } from '@nestjs-query/query-typeorm';
+import { QueryService } from '@ptc-org/nestjs-query-core';
+import { TypeOrmQueryService } from '@ptc-org/nestjs-query-typeorm';
 import { InjectRepository } from '@nestjs/typeorm';
 import { Repository } from 'typeorm';
 import { TodoItemDTO } from './todo-item.dto';
@@ -68,8 +68,8 @@ export class TodoItemService extends TypeOrmQueryService<TodoItemDTO, TodoItemEn
 `v0.6.x`
 
 ```ts
-import { QueryService } from '@nestjs-query/core';
-import { TypeOrmQueryService } from '@nestjs-query/query-typeorm';
+import { QueryService } from '@ptc-org/nestjs-query-core';
+import { TypeOrmQueryService } from '@ptc-org/nestjs-query-typeorm';
 import { InjectRepository } from '@nestjs/typeorm';
 import { Repository } from 'typeorm';
 import { TodoItemEntity } from './todo-item.entity';
@@ -87,8 +87,8 @@ export class TodoItemService extends TypeOrmQueryService<TodoItemEntity> {
 In previous versions of `nestjs-query` the `QueryService` would automatically translate betwen your DTO and database type. This created a soft-dependecy between the persistence service and the view layer. In `v0.6.0` `AssemblerQueryService` was introduced to handle translating between your DTO and persistence type.
 
 ```ts
-import { AssemblerQueryService, QueryService } from '@nestjs-query/core';
-import { InjectTypeOrmQueryService } from '@nestjs-query/query-typeorm';
+import { AssemblerQueryService, QueryService } from '@ptc-org/nestjs-query-core';
+import { InjectTypeOrmQueryService } from '@ptc-org/nestjs-query-typeorm';
 import { TodoItemDTO } from './todo-item.dto';
 import { TodoItemAssembler } from './todo-item.assembler';
 import { TodoItemEntity } from './todo-item.entity';
